# repro

sphinx/9933/: BUILD.bazel  MODULE.bazel  README.md
sphinx/9933/src/: BUILD.bazel  conf.py  index.rst  modules.rst  testmod.rst
sphinx/9933/testmod/: BUILD.bazel  __init__.py  _private.py
