load("@rules_python//python:defs.bzl", "py_library")

alias(
    name = "sources",
    actual = "//src:_src/_sources",
    visibility = ["//visibility:public"],
)

alias(
    name = "preview",
    actual = "//src:src.serve",
    visibility = ["//visibility:public"],
)

py_library(
    name = "testmod",
    srcs = glob(["testmod/**/*.py"]),
    visibility = ["//visibility:public"],
    imports = ["."],
)

